# MCPRAGProjects

./: .gitignore  README.md  pyproject.toml
mcpragproject/: config.toml  mcp_app_rag_client.py  mcp_app_rag_prompt.py  mcp_app_rag_server.py  mcp_app_rag_tools.py  mcp_configs.yaml  utils.py
mcpragproject/test/: TestRagTools.py
