[project]
name = "mcpragproject"
version = "0.1.0"
description = "This is an MCP server that helps Q&A the content of a set of websites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "mcpragproject"